# colorperception

./: README.md  REPORT.md  pyproject.toml
data/: .gitkeep
examples/: attainable_area_stats_D65.json  attainable_area_stats_Default.json  compression_roundtrip_profile.json  demo_random_samples.py  demo_realistic_colors.py  display_p3_metadata.json  distance_comparison.stats.json  gamut_boundary_analysis.py  image_hue_saturation_demo.py  lms_roundtrip_profile.json  metric_analysis.py  rec.2020_metadata.json  roundtrip_precision_profile.py  run_all_figures.py  srgb_grid_analysis.py  srgb_metadata.json  wide_gamut_analysis.py
results/: .gitkeep
results/20260203_233152/: arrays.npz  run_info.json
results/20260204_142057/: arrays.npz  run_info.json  theta.json
src/chromabloch/: __init__.py  compression.py  demo.py  density.py  geometry.py  jacobian.py  mapping.py  mathutils.py  metric.py  opponent.py  params.py  quantum_distances.py  reconstruction.py
tests/: conftest.py  test_attainable_region.py  test_compression.py  test_density.py  test_geometry.py  test_independent_validation.py  test_jacobian.py  test_mapping_roundtrip.py  test_metric.py  test_opponent.py  test_quantum_distances.py  test_saturation_stress.py
